[gd_scene load_steps=6 format=3 uid="uid://ckxwj7jb5p5xw"]

[ext_resource type="Script" path="res://Scripts/Components/judgment_breakdown.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.1, 0.1, 0.15, 0.9)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_perfect"]
bg_color = Color(1, 0.84, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_great"]
bg_color = Color(0.3, 0.8, 1, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_good"]
bg_color = Color(0.5, 1, 0.5, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_miss"]
bg_color = Color(1, 0.3, 0.3, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg"]
bg_color = Color(0.2, 0.2, 0.25, 0.5)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="JudgmentBreakdown" type="PanelContainer"]
custom_minimum_size = Vector2(0, 250)
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 15

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="HeaderLabel" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "JUDGMENTS"
horizontal_alignment = 1

[node name="PerfectRow" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Bar" type="ProgressBar" parent="MarginContainer/VBox/PerfectRow"]
custom_minimum_size = Vector2(300, 30)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/fill = SubResource("StyleBoxFlat_perfect")
theme_override_styles/background = SubResource("StyleBoxFlat_bg")
max_value = 100.0
show_percentage = false

[node name="Label" type="Label" parent="MarginContainer/VBox/PerfectRow"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Perfect: 0 (0%)"

[node name="GreatRow" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Bar" type="ProgressBar" parent="MarginContainer/VBox/GreatRow"]
custom_minimum_size = Vector2(300, 30)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/fill = SubResource("StyleBoxFlat_great")
theme_override_styles/background = SubResource("StyleBoxFlat_bg")
max_value = 100.0
show_percentage = false

[node name="Label" type="Label" parent="MarginContainer/VBox/GreatRow"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Great: 0 (0%)"

[node name="GoodRow" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Bar" type="ProgressBar" parent="MarginContainer/VBox/GoodRow"]
custom_minimum_size = Vector2(300, 30)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/fill = SubResource("StyleBoxFlat_good")
theme_override_styles/background = SubResource("StyleBoxFlat_bg")
max_value = 100.0
show_percentage = false

[node name="Label" type="Label" parent="MarginContainer/VBox/GoodRow"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Good: 0 (0%)"

[node name="MissRow" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Bar" type="ProgressBar" parent="MarginContainer/VBox/MissRow"]
custom_minimum_size = Vector2(300, 30)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/fill = SubResource("StyleBoxFlat_miss")
theme_override_styles/background = SubResource("StyleBoxFlat_bg")
max_value = 100.0
show_percentage = false

[node name="Label" type="Label" parent="MarginContainer/VBox/MissRow"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Miss: 0 (0%)"
